fix hp display on mobile

--- a/src/styles/character.css
+++ b/src/styles/character.css
@@ -226,6 +226,8 @@
   word-spacing: 0.5rem;
   margin-bottom: 0.25rem;
   padding: 0.5rem;
+  flex: 1;
+  text-align: center;
 }
 .hpCharacter span[contenteditable] {
   outline: 0rem solid transparent;
@@ -439,6 +441,7 @@ input[type='number'].updateHp {
   font-weight: bold;
   word-spacing: 0.5rem;
   cursor: pointer;
+  flex: 1;
 }
 .hpCharacter input[type='number']:focus{
   background-color: #eaeaea;
